object/Methods/Object.getOwnPropertyDescriptor()/Examples/nonObjectCoercion.js
/*
Non-object coercion
In ES5, if the first argument to this method is not an object (a primitive), then it will cause a TypeError. In ES2015, a non-object first argument will be coerced to an object at first.
*/

Object.getOwnPropertyDescriptor('foo', 0)
// TypeError: "foo" is not an object  // ES5 code

Object.getOwnPropertyDescriptor('foo', 0)
// Object returned by ES2015 code: {
//   configurable: false,
//   enumerable: true,
//   value: "f",
//   writable: false
// }
